--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,8 @@
     "start": "ng serve --proxy-config proxy-conf.json",
     "build": "ng build",
     "postbuild": "npm run deploy",
-    "predeploy": "rimraf ../resources/static/ && mkdirp ../resources/static","__comment":"run npm  --save-dev rimraf: rimraf allows to delete folder like rm -rf; mkdirp create a new folder",
+    "predeploy": "rimraf ../resources/static/ && mkdirp ../resources/static",
+    "__comment": "run npm  --save-dev rimraf: rimraf allows to delete folder like rm -rf; mkdirp create a new folder",
     "deploy": "copyfiles -f dist/** ../resources/static",
     "test": "ng test",
     "lint": "ng lint",
